<resources>
    <string name="app_name">شهدای دانش آموز</string>
    <string name="title1">شهدای دانش آموز</string>
    <string name="title2">منطقه رحمت آباد و بلوکات</string>
    <string name="txt_version">ورژن نرم افزار: 1.1.0</string>
    <string name="btn_sh1">شهید علی باروتکوبیان</string>
    <string name="btn_sh2">شهید منش صادقپور</string>
    <string name="btn_sh3">شهیدسیدصادق تیموری</string>
    <string name="btn_sh4">شهید عین اله گلابی</string>
    <string name="btn_sh5">شهید نوید خلیلی</string>
    <string name="btn_sh6">شهید داراب رضایی</string>
    <string name="txt_sub">شهدای سرافراز دانش آموز رحمت آباد و بلوکات</string>
    <string name="txt_date_shahid">تاریخ شهادت:</string>
    <string name="txt_location_shahid">محل شهادت:</string>
    <string name="date_sh1">1364/11/20</string>
    <string name="date_sh2">1364/11/20</string>
    <string name="date_sh3">1364/11/6</string>
    <string name="date_sh4">1364/11/21</string>
    <string name="date_sh5">1364/11/6</string>
    <string name="date_sh6">1361/5/15</string>
    <string name="location_sh1">شلمچه</string>
    <string name="location_sh2">شلمچه</string>
    <string name="location_sh3">جاده خرمهشر-اهواز</string>
    <string name="location_sh4">شلمچه</string>
    <string name="location_sh5">جاده خرمشهر-اهواز</string>
    <string name="location_sh6">شلمچه</string>
    <string name="btn_recommendation">وصیت نامه</string>
    <string name="btn_life_story">زندگی نامه</string>
    <string name="menu_about_me">درباره ما</string>
    <string name="exit_app">خروج از برنامه</string>
    <string name="aboutme_title1">نرم افزار معرفی شهدای دانش آموز</string>
    <string name="aboutme_title2">منطقه رحمت آباد و بلوکات</string>
    <string name="author_title1">طراحی و پیاده سازی شده توسط:</string>
    <string name="author_title2">مصطفی نعمتی</string>
    <string name="barotkobian_life">
        "<b>شهید علی باروتکوبیان\n</b>"
        "سوم شهریور 1344 در روستای اسطلخ جان از توابع رحمت آباد شهرستان رودبار زیتون دیده به جهان گشود. پدرش عزیزا... کشاورز بود. از کودکی علاقه ی زیادی به درس خواندن داشت و از هوش و زیرکی زیادی برخوردار بود. نمازهایش را در مسجد و اول وقت می خواند. صدای اذان مسجد توسط او در روستا پخش می شد. مخلص و بی ریا بود.همراه با درس خواندن کار هم می کرد و بیشتر وقت او صرف یاری مردم می شد. رفتار و کردار نیکش برای همه الگو بود. در هوای گرم تابستان برای تامین مخارج زندگی با دهان روزه کارگری می کرد. در کودکی پدرش به بیماری ناعلاجی مبتلا شد و بعد از مدتی بستری شدن در یکی از بیمارستان های مشهد به روستایی در همان جا منتقل و آنجا نگهداری شد. مسئولیت سخت زندگی بر عهده مادر درد کشیده اش بود.\n"
        "در زمان قیام مردم علیه رژیم ظالمانه پهلوی نزد برادرش در رشت تحصیل می کرد و در تظاهرات و راهپیمایی ها و فعالیت های سیاسی شرکت فعال داشت. مدتی در توتکابن درس خواند و بعد از گذراندن دوره راهنمایی در هنرستان فنی شهید بهشتی رودبار مشغول به تحصیل شد و در این زمان کشور ما مورد هجوم دشمنان قرار گرفت و او موفق شد دوبار به جبهه اعزام شود و در عملیات بیت المقدس مجروح و به بیمارستان مشهد اعزام شد. بار سوم به همراه جمعی از دوستان در کاروان بزرگ کربلا شرکت کرد. نیروهای اعزامی رودبار در اهواز وارد تیپ نبی اکرم کرمانشاه شدند. حال و هوای عملیات در منطقه پیچیده بود. آن ها جهت شرکت در عملیات والفچر 8 به لشکر 77 خراسان اعزام شدند و در گردان 110 تیپ 3 سازماندهی شدند. چند روز مشغول آموزش های سخت آبی خاکی در هورالهویزه بودند.\n"
        "ساعت 10 شب بیستم بهمن 1364 عملیات جهت انحراف عراقی ها برای تصرف فاو در شلمچه با رمز یا فاطمه الزهرا (س) شروع شد. عراق با اطلاع از این عملیات موانع سختی را ایجاد کرده بود. در مقابل خطوط دفاعی خود آب بسته بود. رزمندگان برای شکستن خطوط دشمن با مشکل جدی رو به رو بودند. به طوری که تمامی اسحله های رزمندگان در گل و لای فرو رفته بود و هیچ اسلحه ای شلیک نمی کرد و تنها اسلحه دفاعی آن ها آتش توپخانه و تعدادی نارجک های دستی بود. با همه این مشکلات خطوطی که بچه های اعزامی از رودبار در آن بودند شکسته شد ولی شهید باروتکوبیان به همراه هفت نفر از دوستانش به شهادت رسیدند و پیکرهای پاکشان در میان گل و لای مفقود شد تا اینکه پیکر پاک تعدادی از این شهدا در عملیات کربلای 5 شناسایی شد و نزد خانواده فرستاده شدند. پیکر پاک شهید باروتکوبیان هم بعد از سال ها چشم انتظاری به زادگاهش رجعت نمود و در کنار مقبره ی امام زاده محتشم در اسطلخ جان به خاک سپرده شد.\n"
    </string>
    <string name="sadeghpour_life">
        "<b>شهید منش صادقپور\n</b>"
        "ششم شهریور 1346 در روستای اسطلخ جان از توابع رحمت آباد شهرستان رودبار دیده به جهان گشود. پدرش قسمت ا... کشاورز بود. تحصیلات ابتدایی را در زادگاهش گذراند و بعد از پایان دوره ی راهنمایی در شهر توتکابن در رشته برق و الکترونیک در هنرستان رودبار مشغول به تحصیل شد. شهید منش صادقپور در دوران تحصیل دانش آموزی بسیار ممتاز و مودب بود. همراه با تحصیل به عضویت بسیج و انجمن اسلامی درآمد و در پاسداری از دستاوردهای انقلاب نقش بسزایی داشت. دوستی صمیمی و عمیقی با شهید علی باروتکوبیان پسر خاله خود داشت به طوری که در اکثر فعالیت ها در کنار هم بودند.\n"
        "علاقه فراوانی به امام خمینی (ره) داشت و خود را مرید بی چون و چرای امام می دانست. یک لحظه آرام و قرار نداشت. ایمانش واقعی و اراده اش آهنین بود. به اهل بیت (ع) و به ویژه امام حسین (ع) عشق می روزید. مقید کامل به احکام اسلام، نمازش عاشقانه و روزه اش کامل بود. برادرش هوشیار می گفت: منش یک بار روزه بود، کار و فعالیت توانش را کم کرده بود، با اینکه بی حال بود ولی حاضر به خوردن روزه اش نبود.\n"
        "زمانی که متجازان بعثی به کشور ما هجوم می آورند شهید منش صادقپور با شجاعت و مردانگی به سوی جبه های جنگ می شتابد و در مناطق مختلف جنگی به مقابله با دشمن می پردازد.\n"
        "شهید منش صادقپور به همراه تعدادی از دوستان صمیمی بسیج برای همراهی با ارتش جهت عملیات انحرافی دشمن به لشکر 77 ثامن الائمه خراسان تیپ 3 گردان 110 اعزام می گردند. هواپیمای عراقی ها هر لحظه سنگرهای این عزیزان را بمباران می کردند. عملیات این عزیزان در شرایط بسیار سخت و طاقت فرسا انجام می گیرد و به جهت فرو رفتن در گل و لای و باران زیاد، اسلحه های آن ها از کار می افتد. اجساد بسیاری از شهدا در پشت خط شکسته دشمن باقی می ماند و شهید منش صادقپور که شجاعانه تا خط مقدم عراقی ها پیش روی کرده بود در تاریخ بیست بهمن 1364 مورد اصابت رگبار کالیبره 50 دشمن قرار می گیرد و عاشقانه به سوی معبود می شتابد و مدت یک سال آفتاب درخشان خوزستان سنگ مزارش می شود و بعد از تصرف آن مناطق به دست رزمندگان اسلام پیکر مطهرش و گرد و غبار استخوان هایش سرمه چشم دوستان می شود و مزارش همسایه امام زاده محتشم در روستای اسطلخ جان می گردد و ثابت می کند که وفادار برادر شهیدش صادق صادقپور بوده است.\n"
    </string>
    <string name="teymouri_life">
        "<b>شهید سید صادق تیموری\n</b>"
        "اول شهریور 1347 در روستای سندس از توابع رحمت آباد شهرستان رودبار دیده به جهان گشود. پدرش سعداله کشاورز بود. تحصیلات ابتدایی و راهنمایی خود را در زادگاهش گذراند و در دبیرستان سردار جنگل توتکابن تا سال چهارم تحصیل نمود. شهید سید صادق جوانی مهربان، آرام و کم حرف بود. علاقه زیادی به ادامه تحصیل داشت. در مبارزات ملت ایران علیه رژیم پهلوی فعالیت زیادی داشت. بعد از پیروزی انقلاب در تمامی سنگرهای انقلاب حضور داشت و عضو فعال بسیج بود. به همراه تعدادی از دوستان پایگاه مقاومت سندس را تاسیس نمود و شبانه روزی به دفاع از دستاوردهای انقلاب پرداختند.\n"
        "زمانی که مهین عزیز ما مورد هجوم دشمنان بعثی عراق قرار گرفت درس و تحصیل را رها کرد و به صورت داوطلبانه به سوی جبهه ها شتافت و در تیپ 43 لشکر امام رضا (ع) گردان امام رضا (ع) به عنوان امدادگر مشغول به مبارزه با متجاوزان گردید.\n"
        "سرانجام بعد از جانفشانی های فراوان در تاریخ 6 بهمن 1364 در جاده اهواز به خرمشهر به همراه دو تن از فرماندهان جنگ و دوست صمیمی اش شهید نوید خلیلی در اثر حمله ی هواپیماهای متجاورز عراقی به شهادت رسید و پیکر مطهرش در زادگاه خود سندس در گلزار شهدای امام زاده موسی به خاک سپرده شد.\n"
    </string>
    <string name="golabi_life">
        "<b>شهید عین اله گلابی\n</b>"
        "بیستم شهریور 1345 در روستای دفراز از توابع شهرستان رودبار دیده به جهان گشود. پدرش عزیزاله کشاورز بود. دوران کودکی او در رنج و مشقت فراوان سپری شد. پدر در کشیده ی او مجبور بود برای تامین معاش اندک زندگی شهر به شهر و روستا به روستا همراه خانواده مهاجرت نماید. گاهی در برنج زاها و گاهی در باغ های سرسبز چای شمال مشغول به کار می گردید. تحصیلات دوره ابتدایی را تا کلاس چهارم در زادگاهش گذراند و کلاس پنجم را در روستای دشتویل به پایان برد.\n"
        "اول راهنمایی بود که انقلاب شکوهمند اسلامی به پیروزی رسید و این مسئله نطقه عطفی در زندگی او محسوب می شد. او در این دوران به سختی با قرآن انس می گیرد و احکام و قوانین الهی در ضمیر پاکش می نشیند. شهید عین اله در مدت کمی با سیر و سلوک عرفانی و خودسازی عملی به مرحله ی بالایی از معنویت می رسد. زبان در دعا و نیایش پروردگار می گشاید و اخلاق و رفتار و معنویت او تاثیر شگرفی در دوستانش می گذارد و او تبدیل به یک الگوی جوان مومن و انقلابی می شود.\n"
        "وقتی نیروی مقاومت بسیج تشکیل می گردد او یکی از مخلص ترین نیروهای بسیجی منطقه می شود و شب و روز در دو جبهه فرهنگی و نظامی به پاسداری از دست آوردهای انقلاب می پردازد. او از تمامی رنج و سختی که برایش پیش می آید با رضایت خاطر استقبال می کند و آن را زمینه ی رشد و تکامل خود قرار می دهد. وقتی که کشور عزیز ما ایران مورد هجوم دشمنان بعثی قرار می گیرد یکبار در اسفند 1362 به سوی مناطق جنگی می شتابد و سه ماه به عنوان امدادگر به خدمت در جبهه می پردازد. \n"
        "معنویت فضای جبهه تاثیر زیادی بر روح پاکش می گذارد. وقتی که زنده از این ماموریت بر می گردد وصیت نامه خود را پاره نموده و اظهار می دارد که من لیاقت شهدات را نداشته ام. بعد از برگشت از جبهه این بار به یاد دوستان شهید و یاد جبهه ها به دعا و نیایش در مجالس و محافل می پردازد و هرکس که یکبار با او برخورد می کرد شدیداً تحت تاثیر اخلاق و معنویت او قرار می گرفت.\n"
        "سر انجام عشق حضور در جبهه ها او را وادار می کند که تحصیلات خود در سال چهارم دبیرستان را نیمه کاره رها کرده و به سوی جبهه ها بشتابد. قبل از عملیات والفجر 8 به همراه تعدادی از دوستان همدل بسیجی به لشکر 77 خراسان ارتش اعزام می شود و بعد از گذراندن آموزش های سخت در عملیات انحراف دشمن در منطقه ی شلمچه که منجر به آزادی شهر فاو در عملیات والفجر 8 می شود شرکت کرده و در بیست ویکم بهمن 1364 به صورت مظلومانه به شهادت می رسد و پیکر پاکش در گلزار شهدای دفراز به خاک سپرده می شود.\n"
    </string>
    <string name="khalili_life">
        "<b>شهید نوید خلیلی\n</b>"
        "چهارم ارديبهشت سال 1345 در يكي از روستاهای املش ديده به جهان گشود.پدرش غلامرضا کارگر بود. تقدیر بر آن قرار گرفته بود که خانواده کوچک او برای حداقل معاش زندگی از شهری به شهر دیگر مهاجرت نمایند و نوید کوچک در این سختی های سفر پخته و کامل گردد. به همین خاطر تحصیلات ابتدایی را تا چهارم دبستان در تهران می گذراند. در همان سال خانواده او از تهران به سرزمین سرسبز و پرعاطفه ی رحمت آباد هجرت نماید و در روستای سندس ساکن شوند و او کلاس پنجم ابتدایی را آنجا به پایان می رساند. تحصیلات راهنمایی و دبیرستان را تا دیپلم در مدارس توتکابن می گذراند.\n"
        "ازهمان کودکی ویژگی هایی داشت که او را از دیگران ممتاز می کرد. محبوب پدر و مادر بود. دوستانش به او علاقه فراوانی داشتند. خیلی با ادب، مهربان و با صداقت بود. در مدرسه برای همه دانش آموزان الگو بود. اهل عبادت عاشقانه بود و فقط به رضای خداوند می اندیشید. در انقلاب مردم ایران حضور فعال داشت و در تظاهرات و راهپیمایی ها شرکت می کرد.\n"
        "بعد از پیروزی انقلاب فعالیت خود را در انجمن اسلامی و بسیج شروع کرد. بعد از اشغال میهن اسلامی، در اسفند 1362 به سوی جبهه ها می شتابد. و بعد از گذراندن آموزش های نظامی امدادگری به کردستان اعزام می شود و در گردان جندا... مریوان مشغول به مبارزه می گردد. جنگ در گردان جندا... بسیار سخت و طاقت فرسا بود. یک بار دوستی را از زیر آتش گلوله باران نجات می دهد. به پاس رشادت ها و شجاعت هایش سعادت زیارت امام رضا (ع) نصیب او می شود. \n"
        "هجدهم دی ماه 1364 برای بار دوم با کاروان بزرگ کربلا عازم جبهه های جنوب می شود. این بار نوید شهادت را به او داده اند. با دوست صمیمی اش سید صادق تیموری همراه می شود. حال و هوای شهادت در چهره نورانی او کاملاً آشکار است. سفارش ها و نامه ها همه حکایت از آن دارند که این دیگر سفر آخر است. ششم بهمن 1364 در اثر بمباران عراقی ها در جاده خرمشهربه اهواز شهید می شود و پیکر پاکش در گلزار شهدای سندس به خاک سپرده می شود.\n"
    </string>
</resources>